Fix header alignment with main content

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body {
 /* header CSS */
 header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     position: sticky;
-    margin: auto;
     top: 0;
+    margin: 0;
+    width: 100%;
     box-shadow: 1px 2px 2px rgb(0 0 0 / 10%), -1px -1px 2px rgb(0 0 0 / 8%);
     align-items: center;
     line-height: 45px;
